# FastAPI-MCA

./: .gitignore  README.md  main.py  models.py  pyproject.toml  schemas.py  todos.db
Basics/: database.py  main.py  models.py  pyproject.toml  schemas.py  task01.md  todos.db
Blog/: alembic.ini  blog.db  database.py  dependencies.py  main.py  models.py  pyproject.toml  schemas.py  security.py
Blog/alembic/: env.py
Blog/alembic/versions/: 0c517b808556_update_post_tables.py  3b1162a45df7_update_post_tables.py  6dafd5a1732b_add_user_table.py  9d320b92df16_add_is_published_field.py  fa0188c9084d_add_post_and_comment_tables.py
Blog/routers/: auth.py  posts.py  users.py
Blog/services/: auth.py  posts.py
Relationships/: alembic.ini  authors.db  database.py  main.py  models.py  pyproject.toml  schemas.py
Relationships/alembic/: env.py
Relationships/alembic/versions/: 2c6e0ee18865_create_author_and_book_tables.py  910ef4286501_create_author_and_book_tables.py
