[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]
